# self_productivity

./: .env  .gitignore  Cargo.toml
src/: main.rs
src/api/: mod.rs  users.rs
src/configs/: db_config.rs  mod.rs  server_config.rs
src/db/: db_manager.rs  mod.rs  query_getter.rs  repo.rs
src/errors/: mod.rs
src/models/: mod.rs  users.rs
